--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "nesbot/carbon": "^2.58",
         "realrashid/sweet-alert": "^5.1"
     },
     "require-dev": {
